--- a/gb/16/5/14/n7895947.md
+++ b/gb/16/5/14/n7895947.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/simoep3399/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/simoep3399/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/simoep3399/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/simoep3399/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/simoep3399/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/simoep3399/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/simoep3399/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/simoep3399/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/simoep3399/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/simoep3399/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/simoep3399/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/simoep3399/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/simoep3399/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/simoep3399/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/simoep3399/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/simoep3399/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/simoep3399/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/simoep3399/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/simoep3399/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/simoep3399/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/simoep3399/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/simoep3399/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/simoep3399/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/simoep3399/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>大陆法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(49条)</h2>
 
 <h6></h6>
@@ -8,8 +8,8 @@
 	<p>【大纪元2016年05月14日讯】<br />
 <br /><B></p>
 <hr size=1>黑龙江伊春市友好区一家两口大法弟子恭贺法轮大法日！</B><br />大法弟子和家人与全世界大法弟子共同庆祝“五.一三”法轮大法日，恭祝慈悲伟大的师父生日快乐！<br />2016你5月9日<br /><B></p>
-<hr size=1>北京一家三口大法弟子恭祝慈悲伟大的师父生日快乐！恭贺<ahref="https://github.com/simoep3399/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E6%97%A5.md#1">世界法轮大法日</a>！</B><br />感谢恩师！<br /><B></p>
-<hr size=1>黑龙江一家庭五人恭贺法轮大法日！</B><br />黑龙江一家庭五人恭祝慈悲伟大的师父生日快乐！恭贺<ahref="https://github.com/simoep3399/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E6%97%A5.md#1">世界法轮大法日</a>和师尊传法二十四周年！<br />弟子们一定听师尊的话，做好三件事，修好自己，多救众生，让师尊少一分操劳，多一分欣慰！精进再精进，跟师父返还家园！<br />黑龙江五位大法弟子叩拜 敬上<br /><B></p>
+<hr size=1>北京一家三口大法弟子恭祝慈悲伟大的师父生日快乐！恭贺<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E6%97%A5.md#1">世界法轮大法日</a>！</B><br />感谢恩师！<br /><B></p>
+<hr size=1>黑龙江一家庭五人恭贺法轮大法日！</B><br />黑龙江一家庭五人恭祝慈悲伟大的师父生日快乐！恭贺<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E6%97%A5.md#1">世界法轮大法日</a>和师尊传法二十四周年！<br />弟子们一定听师尊的话，做好三件事，修好自己，多救众生，让师尊少一分操劳，多一分欣慰！精进再精进，跟师父返还家园！<br />黑龙江五位大法弟子叩拜 敬上<br /><B></p>
 <hr size=1>山东潍坊高密大法弟子恭祝慈悲伟大的师尊生日快乐！</B><br />山东潍坊高密全体大法弟子恭祝慈悲伟大的师尊生日快乐！<br />普天同庆5.13世界法轮大法日暨法轮大法洪传二十四周年！<br /><B></p>
 <hr size=1>山东省潍坊市高密市一大法弟子全家恭祝师尊生日快乐！</B><br />普天同庆5.13世界法轮大法日暨法轮大法洪传二十四周年！<br />感谢师尊慈悲救度！叩拜师尊！<br /><B></p>
 <hr size=1>山东省潍坊市高密市一学法小组四老年大法弟子恭祝师父生日快乐！</B><br />师父您辛苦了！<br />我们一定做好三件事，多学法，多炼功，多救人，请师父放心！<br />弟子叩拜师父！<br /><B></p>
@@ -33,11 +33,11 @@
 <hr size=1>辽宁省大连开发区一学法小组恭祝慈悲伟大的师尊生日快乐！</B><br />在世界法轮大法日到来之际，我们学法小组的大法弟子恭贺世界法轮大法日！恭祝慈悲伟大的师尊生日快乐！<br />大连开发区一学法小组大法弟子恭祝<br />2016年5月10日<br /><B></p>
 <hr size=1>江苏常州大法弟子恭贺法轮大法日！</B><br />江苏常州大法弟子恭祝伟大的师尊生日快乐！同庆世界法轮大法日！<br />师尊您辛苦了！弟子想念师尊！<br /><B></p>
 <hr size=1>河北省保定市蠡县大法弟子携全家恭祝慈悲伟大的师尊生日快乐！</B><br />庆贺第十七届世界法轮大法日<br />河北省保定市蠡县大法弟子携全家恭祝慈悲伟大的师尊生日快乐！庆贺第十七届世界法轮大法日！<br /><B></p>
-<hr size=1>吉林省延边州延吉市一朝鲜族大法弟子恭祝慈悲伟<ahref="https://github.com/simoep3399/djy/blob/master/gb/tag/%E5%A4%A7%E5%B8%88.md#1">大师</a>尊生日快乐！</B><br />吉林省延吉市一朝鲜族大法弟子恭祝慈悲伟<ahref="https://github.com/simoep3399/djy/blob/master/gb/tag/%E5%A4%A7%E5%B8%88.md#1">大师</a>尊生日快乐！<br />感恩师尊救度之恩，做好三件事圆满随师还。<br /><B></p>
+<hr size=1>吉林省延边州延吉市一朝鲜族大法弟子恭祝慈悲伟<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A4%A7%E5%B8%88.md#1">大师</a>尊生日快乐！</B><br />吉林省延吉市一朝鲜族大法弟子恭祝慈悲伟<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A4%A7%E5%B8%88.md#1">大师</a>尊生日快乐！<br />感恩师尊救度之恩，做好三件事圆满随师还。<br /><B></p>
 <hr size=1>山东省青岛市莱西市一学法小组大法弟子跪拜恭祝慈悲伟大的师尊生日快乐！</B><br />山东省莱西市一学法小组全体大法弟子跪拜恭祝慈悲伟大的师尊生日快乐！恭祝世界法轮大法日！<br /><B></p>
 <hr size=1>山东省淄博市沂源县一家三名大法弟子恭贺法轮大法日！</B><br />山东省沂源县一家三人恭祝慈悲、伟大的师父生日快乐！<br /><B></p>
 <hr size=1>黑龙江省哈尔滨二人学法小组恭贺世界法轮大法日</B><br />哈尔滨市二人学法小组恭贺世界法轮大法日！恭祝慈悲伟大的师尊生日快乐！师父您辛苦了！<br /><B></p>
-<hr size=1>辽宁鞍山大法弟子恭贺<ahref="https://github.com/simoep3399/djy/blob/master/gb/tag/%E6%9D%8E%E6%B4%AA%E5%BF%97.md#1">李洪志</a>师父生日快乐！</B><br />鞍山大法弟子恭贺师父生日快乐！ 喜迎法轮大法日佛光普照法正天地乾坤！ 唯有感恩 泪水打衣衫　忠肠知天恩 佛光唤本性　师尊赐善真 末世转法轮　末劫正乾坤 普天颂法日　众宇赞师尊丙申年暮春五月<br /><B></p>
+<hr size=1>辽宁鞍山大法弟子恭贺<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%9D%8E%E6%B4%AA%E5%BF%97.md#1">李洪志</a>师父生日快乐！</B><br />鞍山大法弟子恭贺师父生日快乐！ 喜迎法轮大法日佛光普照法正天地乾坤！ 唯有感恩 泪水打衣衫　忠肠知天恩 佛光唤本性　师尊赐善真 末世转法轮　末劫正乾坤 普天颂法日　众宇赞师尊丙申年暮春五月<br /><B></p>
 <hr size=1>石家庄市大法弟子恭祝师尊生日快乐！</B><br />河北省石家庄市新华区一学法小组全体大法弟子恭祝恩师生日快乐！同贺法轮大法洪传二十四周年！<br /><B></p>
 <hr size=1>河北省石家庄燕都金地城大法弟子一家人恭祝师尊六十五岁华诞！</B><br />感恩师尊！谢谢师尊！<br /><B></p>
 <hr size=1>河北省石家庄一学法小组全体大法弟子祝师尊生日快乐！</B><br /><B></p>
@@ -60,41 +60,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/16/5/13/n7892679.md#1">大陆法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(29条)</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/16/5/13/n7892687.md#1">大陆法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(46条)</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/16/5/13/n7892693.md#1">大陆法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(49条)</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/16/5/13/n7892696.md#1">大陆法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(31条)</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/5/13/n7892679.md#1">大陆法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(29条)</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/5/13/n7892687.md#1">大陆法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(46条)</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/5/13/n7892693.md#1">大陆法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(49条)</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/5/13/n7892696.md#1">大陆法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(31条)</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/simoep3399/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/18/n10793353.md#1" target="_blank">林辉：金庸堂哥穆旦走到了幻想的尽头</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/6/n10461502.md#1" target="_blank">四位中国军医的人生奇遇</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/9/n10040271.md#1" target="_blank">共产暴政录：“胡风反革命集团”案</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/4/26/n2096078.md#1" target="_blank">载入史册的一幕 中南海万人上访</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/2/26/n12776678.md#1">《圣经》专家：龙确实存在 曾与人类共存</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/20/12/30/n12654622.md#1">【命理】他才胜于德 如何走上自我毁灭之路</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/2/26/n12777426.md#1">《转法轮》提及的史前文明案例：海底建筑</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/2/n12784045.md#1">日本男童忆述上辈子被车撞死 想见前世母亲</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/2/24/n12771764.md#1">预言试析（9）诺查丹玛斯预言大瘟疫时间的算法</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/3/n12787815.md#1">【秦鹏直播】北京武力攻台？最危险时间点</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/3/n12787783.md#1">【新闻看点】美尝遭主宰滋味？欧3强国警告中共</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/2/n12785068.md#1">【军事热点】中共举行长期军演 南海注定不平静</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/1/n12783059.md#1">44岁舒淇满头现白发 网友难接受为她支招</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/2/n12785270.md#1">西昌市委书记李俊被双开 曾与女副书记通奸</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/2/n12785540.md#1">【远见快评】放生中芯国际 拜登打右灯向左转</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/1/n12783059.md#1">44岁舒淇满头现白发 网友难接受为她支招</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/3/n12785644.md#1">唐嫣披罗晋西装外套 夫妻俩牵手下班秀恩爱</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/1/n12783227.md#1">刘嘉玲释当经理人原因：梁朝伟很自闭需保护</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/3/n12786688.md#1">粗口霸凌？外遇？江宏杰福原爱被爆协议离婚中</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/2/n12785375.md#1">被公公赵树海爆贴心事 高圆圆获赞完美儿媳</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/2/21/n12766128.md#1">90%打鼾的人是因为张嘴呼吸？简单4步止鼾</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/2/n12784045.md#1">日本男童忆述上辈子被车撞死 想见前世母亲</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/2/n12783856.md#1">【重播】糖尿病最怕的食物？3招降血糖学起来</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/2/n12783382.md#1">凤梨助消化、改善便秘 4种情况要少吃</a></li>
-<li><a href="https://github.com/simoep3399/djy/blob/master/gb/21/3/2/n12783610.md#1">游客涌入俄罗斯动物园 听这只幼虎“唱歌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11962082.md#1">【最新疫情3.22】川普启动三州国民警卫队</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962674.md#1">意大利口罩被谁买空？意媒驳中共救援谎言</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962341.md#1">对北京掩盖疫情失望 川普：中共非常诡秘</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11963263.md#1">【一线采访】武汉市民：对政府彻底失望</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962520.md#1">企业家吁召开紧急会议 矛头直指中共最高层</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11963031.md#1">胞弟成为台湾女婿 瑞莎曝婚礼照喊开心</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11966011.md#1">刘真44岁辞世 演艺圈好友不舍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11962008.md#1">好莱坞制作人瓦特染疫：身体像被巴士撞到</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/11/n11933384.md#1">断臂僧转世？小蛮童有胆 向康熙帝要官职</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11964127.md#1">后悔或是一味良药 但须在大限前</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11961878.md#1">【历史回眸】人们忘记神 这就是一切的起因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/simoep3399/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/simoep3399/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/5/14/n7895947.htm">大陆法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(49条)</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/5/14/n7895947.htm">大陆法轮功学员恭贺世界法轮大法日暨李洪志大师华诞(49条)</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/simoep3399/djy/blob/master/gb/16/5/14/n7895947.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/simoep3399/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/simoep3399/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/simoep3399/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/simoep3399/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/simoep3399/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/16/5/14/n7895947.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
